--- a/images/base(1).css
+++ b/images/base(1).css
@@ -300,9 +300,11 @@
 .outline_prgrph {
 	color: #333;
 	line-height: 1.8;
+}
+.line{
 	display:none;
 }
-.outline_prgrph1 {
+.line1 {
 	color: #333;
 	line-height: 1.8;
 	display:block;
@@ -447,10 +449,11 @@
 	/*---------- outlineベーステキスト設定 ----------*/
 	.outline_prgrph {
 		font-size: 1.5rem;
+	}
+	.line{
 		display:block;
 	}
-	.outline_prgrph1 {
-		font-size: 1.5rem;
+	.line1 {
 		display:none;
 	}
 
